--- a/spam_detector/config.json
+++ b/spam_detector/config.json
@@ -6,6 +6,7 @@
     ["beck-s.tar.gz", "lokay-m.tar.gz", "kaminski-v.tar.gz", "farmer-d.tar.gz",
       "kitchen-l.tar.gz",   "williams-w3.tar.gz"],
     "spam_files": [ "BG.tar.gz", "GP.tar.gz", "SH.tar.gz"],
-    "res_dataset_folder_name": ""
+    "res_dataset_folder_name": "/content/drive/MyDrive/Colab Notebooks/Spam_Detector/Enron_raw_data/dataset",
+    "test_share": 0.3
   }
 }
